syntax = "proto3";

package shorten;

option go_package = "./";

import "google/api/annotations.proto";

service Shorten {
    rpc CreateShortLink(CreateShortLinkRequest) returns (CreateShortLinkResponse) {
        option (google.api.http) = {
            post: "/post"
            body: "*"
        };
    }
    rpc FetchOriginalLink(FetchOriginalLinkRequest) returns (FetchOriginalLinkResponse) {
        option (google.api.http) = {
            get: "/get/{short_link}"
        };
    }
}

message CreateShortLinkRequest {
    string original_link = 1;
}

message CreateShortLinkResponse {
    string short_link = 1;
}

message FetchOriginalLinkRequest {
    string short_link = 1;
}

message FetchOriginalLinkResponse {
    string original_link = 1;
}